Fix misaligned letters in HealthAtoZ

--- a/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
@@ -162,7 +162,7 @@
             }
 
             .letters {
-                justify-content: left;
+                justify-content: center;
                 flex-wrap: wrap;
                 gap: 15px;
 
